--- a/index.html
+++ b/index.html
@@ -3,117 +3,241 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cálculo da OP</title>
+    <title>Controle de Produção de OP</title>
     <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 20px;
+        }
+        .input-group {
+            margin-bottom: 10px;
+        }
         label {
             display: block;
-            margin-top: 10px;
+            margin-bottom: 5px;
+        }
+        input[type="number"],
+        input[type="text"] {
+            width: 100%;
+            padding: 8px;
+            margin-bottom: 10px;
+            box-sizing: border-box;
+        }
+        button {
+            padding: 10px 20px;
+            color: white;
+            border: none;
+            cursor: pointer;
+            margin-right: 5px;
+        }
+        .machine-btn {
+            width: 232px;
+            height: 72px;
+            margin-bottom: 20px;
+            font-size: 20px;
+        }
+        #btn-cl01 { background-color: #FF5733; }
+        #btn-cl02 { background-color: #33C1FF; }
+        #btn-cl03 { background-color: #33FF57; }
+        #btn-cl04 { background-color: #FFC300; }
+        .calc-btn {
+            background-color: #4CAF50;
+        }
+        .calc-btn:hover {
+            background-color: #45a049;
+        }
+        .result {
+            margin-top: 20px;
+            font-weight: bold;
+        }
+        table {
+            margin-top: 20px;
+            width: 100%;
+            border-collapse: collapse;
+        }
+        table, th, td {
+            border: 1px solid #ddd;
+            padding: 8px;
+            text-align: left;
+        }
+        th {
+            background-color: #f2f2f2;
         }
     </style>
 </head>
 <body>
-    <h1>Calculadora de Voltas e Quantidade Total da OP</h1>
+    <h2>Controle de Produção de OP</h2>
 
-    <label for="opNumber">Número da OP:</label>
-    <input type="text" id="opNumber" placeholder="xxx.xxx/xx.xx" oninput="formatOPNumber()" required>
+    <div>
+        <button id="btn-cl01" class="machine-btn" onclick="enableInputs('CL-01')">CL-01</button>
+        <button id="btn-cl02" class="machine-btn" onclick="enableInputs('CL-02')">CL-02</button>
+        <button id="btn-cl03" class="machine-btn" onclick="enableInputs('CL-03')">CL-03</button>
+        <button id="btn-cl04" class="machine-btn" onclick="enableInputs('CL-04')">CL-04</button>
+    </div>
 
-    <label for="componentCode">Código do Componente:</label>
-    <input type="number" id="componentCode" required>
+    <div class="input-group">
+        <label for="opNumber">Número da OP:</label>
+        <input type="text" id="opNumber" maxlength="13" disabled oninput="formatOPNumber(this)">
+    </div>
+    <div class="input-group">
+        <label for="componentCode">Código do Componente:</label>
+        <input type="number" id="componentCode" min="0" disabled>
+    </div>
+    <div class="input-group">
+        <label for="opQuantity">Quantidade da OP:</label>
+        <input type="number" id="opQuantity" min="0" disabled>
+    </div>
+    <div class="input-group">
+        <label for="opLength">Comprimento da OP:</label>
+        <input type="number" id="opLength" min="0" disabled>
+    </div>
+    <div class="input-group">
+        <label for="fabricType">Tipo de Tecido:</label>
+        <input type="text" id="fabricType" disabled>
+    </div>
+    <div class="input-group">
+        <label for="opWeight">Gramatura da OP:</label>
+        <input type="number" id="opWeight" min="0" disabled>
+    </div>
+    <div class="input-group">
+        <label for="piecesRemoved">Quantidade de Peças Retiradas:</label>
+        <input type="number" id="piecesRemoved" min="0" disabled>
+    </div>
+    <button class="calc-btn" onclick="calculateAndSave()" disabled id="calculate-btn">Calcular</button>
+    
+    <div class="result" id="result"></div>
 
-    <label for="opQuantity">Quantidade da OP:</label>
-    <input type="number" id="opQuantity" required>
+    <table id="recordsTable">
+        <thead>
+            <tr>
+                <th>Data e Hora</th>
+                <th>Nome da Máquina</th>
+                <th>Número da OP</th>
+                <th>Código do Componente</th>
+                <th>Quantidade da OP</th>
+                <th>Comprimento da OP</th>
+                <th>Tipo de Tecido</th>
+                <th>Gramatura da OP</th>
+                <th>Quantidade de Peças Retiradas</th>
+            </tr>
+        </thead>
+        <tbody></tbody>
+    </table>
 
-    <label for="typeSelect">Tipo (Plano, Tubular, PET):</label>
-    <select id="typeSelect" onchange="calculateTurns()">
-        <option value="">Selecione...</option>
-        <option value="Plano">Plano</option>
-        <option value="Tubular">Tubular</option>
-        <option value="PET">PET</option>
-    </select>
-
-    <label for="gramatura">Gramatura:</label>
-    <input type="number" id="gramatura" oninput="calculateTurns()" required>
-
-    <label for="opLength">Comprimento da OP (cm):</label>
-    <input type="number" id="opLength" required>
-
-    <label for="numCortes">Número de Voltas:</label>
-    <input type="number" id="numVoltas" disabled>
-
-    <label for="numCortes">Quantidade Cortada:</label>
-    <input type="number" id="qtdCortada" disabled>
-
-    <label for="qtdTotal">Quantidade Total:</label>
-    <input type="number" id="qtdTotal" disabled>
-
-    <label for="restanteOP">Restante da OP:</label>
-    <input type="number" id="restanteOP" disabled>
+    <button onclick="downloadCSV()">Download CSV</button>
 
     <script>
-        const carrosselLength = 540; // Comprimento do carrossel em cm
+        let records = [];
+        let selectedMachine = '';
 
-        function formatOPNumber() {
-            let input = document.getElementById('opNumber');
-            let value = input.value.replace(/\D/g, ''); // Remove tudo que não for número
-            if (value.length > 6) {
-                input.value = value.slice(0, 3) + '.' + value.slice(3, 6) + '/' + value.slice(6, 8) + '.' + value.slice(8, 10);
-            } else if (value.length > 3) {
-                input.value = value.slice(0, 3) + '.' + value.slice(3);
-            } else {
-                input.value = value;
+        document.addEventListener('DOMContentLoaded', () => {
+            loadRecords();
+            updateTable();
+        });
+
+        function enableInputs(machine) {
+            selectedMachine = machine;
+            document.getElementById('opNumber').disabled = false;
+            document.getElementById('componentCode').disabled = false;
+            document.getElementById('opQuantity').disabled = false;
+            document.getElementById('opLength').disabled = false;
+            document.getElementById('fabricType').disabled = false;
+            document.getElementById('opWeight').disabled = false;
+            document.getElementById('piecesRemoved').disabled = false;
+            document.getElementById('calculate-btn').disabled = false;
+        }
+
+        function formatOPNumber(input) {
+            let value = input.value.replace(/\D/g, '');
+            if (value.length > 3) value = value.substring(0, 3) + '.' + value.substring(3);
+            if (value.length > 7) value = value.substring(0, 7) + '/' + value.substring(7);
+            if (value.length > 10) value = value.substring(0, 10) + '.' + value.substring(10);
+            input.value = value;
+        }
+
+        function calculateAndSave() {
+            const opNumber = document.getElementById('opNumber').value;
+            const componentCode = parseInt(document.getElementById('componentCode').value) || 0;
+            const opQuantity = parseInt(document.getElementById('opQuantity').value) || 0;
+            const opLength = parseInt(document.getElementById('opLength').value) || 0;
+            const fabricType = document.getElementById('fabricType').value;
+            const opWeight = parseInt(document.getElementById('opWeight').value) || 0;
+            const piecesRemoved = parseInt(document.getElementById('piecesRemoved').value) || 0;
+
+            const totalPieces = opQuantity - piecesRemoved;
+            document.getElementById('result').textContent = `Quantidade de Peças Restantes: ${totalPieces}`;
+
+            const date = new Date().toLocaleString("pt-BR", { timeZone: "America/Sao_Paulo" }).replace(",", " ");
+            records.push({ date, machine: selectedMachine, opNumber, componentCode, opQuantity, opLength, fabricType, opWeight, piecesRemoved });
+
+            saveRecords();
+            updateTable();
+
+            document.getElementById('opNumber').value = '';
+            document.getElementById('componentCode').value = '';
+            document.getElementById('opQuantity').value = '';
+            document.getElementById('opLength').value = '';
+            document.getElementById('fabricType').value = '';
+            document.getElementById('opWeight').value = '';
+            document.getElementById('piecesRemoved').value = '';
+
+            document.getElementById('opNumber').disabled = true;
+            document.getElementById('componentCode').disabled = true;
+            document.getElementById('opQuantity').disabled = true;
+            document.getElementById('opLength').disabled = true;
+            document.getElementById('fabricType').disabled = true;
+            document.getElementById('opWeight').disabled = true;
+            document.getElementById('piecesRemoved').disabled = true;
+            document.getElementById('calculate-btn').disabled = true;
+        }
+
+        function updateTable() {
+            const tableBody = document.getElementById('recordsTable').getElementsByTagName('tbody')[0];
+            tableBody.innerHTML = "";
+
+            records.sort((a, b) => new Date(b.date) - new Date(a.date));
+
+            records.forEach(record => {
+                const row = tableBody.insertRow();
+                row.insertCell(0).textContent = record.date;
+                row.insertCell(1).textContent = record.machine;
+                row.insertCell(2).textContent = record.opNumber;
+                row.insertCell(3).textContent = record.componentCode;
+                row.insertCell(4).textContent = record.opQuantity;
+                row.insertCell(5).textContent = record.opLength;
+                row.insertCell(6).textContent = record.fabricType;
+                row.insertCell(7).textContent = record.opWeight;
+                row.insertCell(8).textContent = record.piecesRemoved;
+            });
+        }
+
+        function saveRecords() {
+            localStorage.setItem('productionRecords', JSON.stringify(records));
+        }
+
+        function loadRecords() {
+            const savedRecords = localStorage.getItem('productionRecords');
+            if (savedRecords) {
+                records = JSON.parse(savedRecords);
             }
         }
 
-        function calculateTurns() {
-            const type = document.getElementById('typeSelect').value;
-            const gramatura = parseFloat(document.getElementById('gramatura').value);
-            let voltas;
+        function downloadCSV() {
+            let csvContent = "data:text/csv;charset=utf-8," + 
+                "Data e Hora,Nome da Máquina,Número da OP,Código do Componente,Quantidade da OP,Comprimento da OP,Tipo de Tecido,Gramatura da OP,Quantidade de Peças Retiradas\n";
+            
+            records.forEach(record => {
+                const row = `${record.date},${record.machine},${record.opNumber},${record.componentCode},${record.opQuantity},${record.opLength},${record.fabricType},${record.opWeight},${record.piecesRemoved}`;
+                csvContent += row + "\n";
+            });
 
-            if (type === 'Plano') {
-                if (gramatura === 65) voltas = 80;
-                else if (gramatura === 120) voltas = 40;
-                else voltas = Math.floor(80 - (gramatura - 65) / (120 - 65) * (80 - 40)); // Regra de três
-            } else if (type === 'Tubular') {
-                if (gramatura === 65) voltas = 45;
-                else if (gramatura === 82) voltas = 40;
-                else voltas = Math.floor(45 - (gramatura - 65) / (82 - 65) * (45 - 40)); // Regra de três
-            } else if (type === 'PET') {
-                if (gramatura === 170) voltas = 25;
-            }
-
-            document.getElementById('numVoltas').value = voltas || 0;
-            calculateCutQuantity();
-        }
-
-        function calculateCutQuantity() {
-            const voltas = parseFloat(document.getElementById('numVoltas').value);
-            const opLength = parseFloat(document.getElementById('opLength').value);
-
-            if (voltas && opLength) {
-                const cuts = Math.floor(carrosselLength / opLength); // Número de cortes
-                const qtdCortada = voltas * cuts;
-
-                document.getElementById('qtdCortada').value = qtdCortada;
-
-                calculateTotalQuantity(qtdCortada);
-            }
-        }
-
-        function calculateTotalQuantity(qtdCortada) {
-            const opQuantity = parseFloat(document.getElementById('opQuantity').value);
-
-            if (opQuantity && qtdCortada) {
-                const qtdTotal = qtdCortada * carrosselLength;
-                document.getElementById('qtdTotal').value = qtdTotal;
-
-                const restante = opQuantity - qtdTotal;
-                document.getElementById('restanteOP').value = restante > 0 ? restante : 0;
-
-                if (restante > 0) {
-                    const voltasAdicionais = Math.floor((restante * carrosselLength) / opLength);
-                    document.getElementById('numVoltas').value = voltasAdicionais;
-                }
-            }
+            const encodedUri = encodeURI(csvContent);
+            const link = document.createElement('a');
+            link.setAttribute('href', encodedUri);
+            link.setAttribute('download', 'production_records.csv');
+            document.body.appendChild(link);
+            link.click();
+            document.body.removeChild(link);
         }
     </script>
 </body>
