--- a/index.html
+++ b/index.html
@@ -1,147 +1,242 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Controle de Produção</title>
+    <title>Controle de Produção de OP</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             margin: 20px;
         }
-        label {
-            display: inline-block;
-            width: 200px;
+        .input-group {
             margin-bottom: 10px;
         }
-        input, select {
+        label {
+            display: block;
+            margin-bottom: 5px;
+        }
+        input[type="number"],
+        input[type="text"] {
+            width: 100%;
+            padding: 8px;
             margin-bottom: 10px;
-            padding: 5px;
+            box-sizing: border-box;
         }
         button {
             padding: 10px 20px;
-            background-color: #4CAF50;
             color: white;
             border: none;
             cursor: pointer;
+            margin-right: 5px;
         }
-        button:hover {
+        .machine-btn {
+            width: 232px;
+            height: 72px;
+            margin-bottom: 20px;
+            font-size: 20px;
+        }
+        #btn-cl01 { background-color: #FF5733; }
+        #btn-cl02 { background-color: #33C1FF; }
+        #btn-cl03 { background-color: #33FF57; }
+        #btn-cl04 { background-color: #FFC300; }
+        .calc-btn {
+            background-color: #4CAF50;
+        }
+        .calc-btn:hover {
             background-color: #45a049;
         }
-        h2 {
+        .result {
             margin-top: 20px;
+            font-weight: bold;
+        }
+        table {
+            margin-top: 20px;
+            width: 100%;
+            border-collapse: collapse;
+        }
+        table, th, td {
+            border: 1px solid #ddd;
+            padding: 8px;
+            text-align: left;
+        }
+        th {
+            background-color: #f2f2f2;
         }
     </style>
 </head>
 <body>
-    <h1>Controle de Produção</h1>
+    <h2>Controle de Produção de OP</h2>
 
-    <form id="productionForm">
+    <div>
+        <button id="btn-cl01" class="machine-btn" onclick="enableInputs('CL-01')">CL-01</button>
+        <button id="btn-cl02" class="machine-btn" onclick="enableInputs('CL-02')">CL-02</button>
+        <button id="btn-cl03" class="machine-btn" onclick="enableInputs('CL-03')">CL-03</button>
+        <button id="btn-cl04" class="machine-btn" onclick="enableInputs('CL-04')">CL-04</button>
+    </div>
+
+    <div class="input-group">
+        <label for="opNumber">Número da OP:</label>
+        <input type="text" id="opNumber" maxlength="13" disabled oninput="formatOPNumber(this)">
+    </div>
+    <div class="input-group">
+        <label for="componentCode">Código do Componente:</label>
+        <input type="number" id="componentCode" min="0" disabled>
+    </div>
+    <div class="input-group">
+        <label for="opQuantity">Quantidade da OP:</label>
+        <input type="number" id="opQuantity" min="0" disabled>
+    </div>
+    <div class="input-group">
+        <label for="opLength">Comprimento da OP:</label>
+        <input type="number" id="opLength" min="0" disabled>
+    </div>
+    <div class="input-group">
         <label for="fabricType">Tipo de Tecido:</label>
-        <select id="fabricType" required>
-            <option value="">Selecione</option>
-            <option value="Plano">Plano</option>
-            <option value="Tubular">Tubular</option>
-            <option value="PET">PET</option>
-        </select><br>
-
+        <input type="text" id="fabricType" disabled>
+    </div>
+    <div class="input-group">
         <label for="opWeight">Gramatura da OP:</label>
-        <input type="number" id="opWeight" required><br>
+        <input type="number" id="opWeight" min="0" disabled>
+    </div>
+    <div class="input-group">
+        <label for="piecesRemoved">Quantidade de Peças Retiradas:</label>
+        <input type="number" id="piecesRemoved" min="0" disabled>
+    </div>
+    <button class="calc-btn" onclick="calculateAndSave()" disabled id="calculate-btn">Calcular</button>
+    
+    <div class="result" id="result"></div>
 
-        <label for="opLength">Comprimento da OP (cm):</label>
-        <input type="number" id="opLength" required><br>
+    <table id="recordsTable">
+        <thead>
+            <tr>
+                <th>Data e Hora</th>
+                <th>Nome da Máquina</th>
+                <th>Número da OP</th>
+                <th>Código do Componente</th>
+                <th>Quantidade da OP</th>
+                <th>Comprimento da OP</th>
+                <th>Tipo de Tecido</th>
+                <th>Gramatura da OP</th>
+                <th>Quantidade de Peças Retiradas</th>
+            </tr>
+        </thead>
+        <tbody></tbody>
+    </table>
 
-        <button type="button" onclick="calculateResults()">Calcular Resultados</button>
-    </form>
-
-    <h2>Resultados:</h2>
-    <p id="cutsResult">Número de Cortes: </p>
-    <p id="turnsResult">Número de Voltas: </p>
-    <p id="cutAmountResult">Quantidade Cortada: </p>
+    <button onclick="downloadCSV()">Download CSV</button>
 
     <script>
-        const fabricType = document.getElementById('fabricType');
-        const opWeight = document.getElementById('opWeight');
-        const opLength = document.getElementById('opLength');
-        const cutsResult = document.getElementById('cutsResult');
-        const turnsResult = document.getElementById('turnsResult');
-        const cutAmountResult = document.getElementById('cutAmountResult');
+        let records = [];
+        let selectedMachine = '';
 
-        // Ajusta gramatura de acordo com o tipo de tecido selecionado
-        fabricType.addEventListener('change', function() {
-            const selectedFabric = fabricType.value;
-            if (selectedFabric === 'Plano') {
-                opWeight.disabled = false;
-                opWeight.min = 65;
-                opWeight.max = 120;
-                opWeight.value = ''; // Limpar valor anterior
-            } else if (selectedFabric === 'Tubular') {
-                opWeight.disabled = false;
-                opWeight.min = 65;
-                opWeight.max = 82;
-                opWeight.value = ''; // Limpar valor anterior
-            } else if (selectedFabric === 'PET') {
-                opWeight.value = 170;
-                opWeight.disabled = true;
-            }
+        document.addEventListener('DOMContentLoaded', () => {
+            loadRecords();
+            updateTable();
         });
 
-        // Função para calcular os resultados
-        function calculateResults() {
-            const fabric = fabricType.value;
-            const weight = parseFloat(opWeight.value);
-            const length = parseFloat(opLength.value);
-            const maxCarouselLength = 540;
-
-            if (!fabric || isNaN(weight) || isNaN(length)) {
-                alert('Por favor, preencha todos os campos.');
-                return;
-            }
-
-            // Cálculo do Número de Cortes
-            const numCuts = Math.floor(maxCarouselLength / length);
-            cutsResult.textContent = `Número de Cortes: ${numCuts}`;
-
-            // Cálculo do Número de Voltas
-            let numTurns = 0;
-
-            if (fabric === 'Plano') {
-                numTurns = calculateTurnsPlano(weight);
-            } else if (fabric === 'Tubular') {
-                numTurns = calculateTurnsTubular(weight);
-            } else if (fabric === 'PET') {
-                numTurns = 25; // Valor fixo para PET
-            }
-
-            turnsResult.textContent = `Número de Voltas: ${numTurns}`;
-
-            // Cálculo da Quantidade Cortada
-            const cutAmount = numCuts * numTurns;
-            cutAmountResult.textContent = `Quantidade Cortada: ${cutAmount}`;
+        function enableInputs(machine) {
+            selectedMachine = machine;
+            document.getElementById('opNumber').disabled = false;
+            document.getElementById('componentCode').disabled = false;
+            document.getElementById('opQuantity').disabled = false;
+            document.getElementById('opLength').disabled = false;
+            document.getElementById('fabricType').disabled = false;
+            document.getElementById('opWeight').disabled = false;
+            document.getElementById('piecesRemoved').disabled = false;
+            document.getElementById('calculate-btn').disabled = false;
         }
 
-        // Função para calcular o número de voltas para tecido plano
-        function calculateTurnsPlano(weight) {
-            const baseWeight = 65;
-            const baseTurns = 80;
-            if (weight === baseWeight) {
-                return baseTurns;
-            } else {
-                const difference = (weight - baseWeight) * (80 - 72) / (75 - 65);
-                return baseTurns - difference;
+        function formatOPNumber(input) {
+            let value = input.value.replace(/\D/g, '');
+            if (value.length > 3) value = value.substring(0, 3) + '.' + value.substring(3);
+            if (value.length > 7) value = value.substring(0, 7) + '/' + value.substring(7);
+            if (value.length > 10) value = value.substring(0, 10) + '.' + value.substring(10);
+            input.value = value;
+        }
+
+        function calculateAndSave() {
+            const opNumber = document.getElementById('opNumber').value;
+            const componentCode = parseInt(document.getElementById('componentCode').value) || 0;
+            const opQuantity = parseInt(document.getElementById('opQuantity').value) || 0;
+            const opLength = parseInt(document.getElementById('opLength').value) || 0;
+            const fabricType = document.getElementById('fabricType').value;
+            const opWeight = parseInt(document.getElementById('opWeight').value) || 0;
+            const piecesRemoved = parseInt(document.getElementById('piecesRemoved').value) || 0;
+
+            const totalPieces = opQuantity - piecesRemoved;
+            document.getElementById('result').textContent = `Quantidade de Peças Restantes: ${totalPieces}`;
+
+            const date = new Date().toLocaleString("pt-BR", { timeZone: "America/Sao_Paulo" }).replace(",", " ");
+            records.push({ date, machine: selectedMachine, opNumber, componentCode, opQuantity, opLength, fabricType, opWeight, piecesRemoved });
+
+            saveRecords();
+            updateTable();
+
+            document.getElementById('opNumber').value = '';
+            document.getElementById('componentCode').value = '';
+            document.getElementById('opQuantity').value = '';
+            document.getElementById('opLength').value = '';
+            document.getElementById('fabricType').value = '';
+            document.getElementById('opWeight').value = '';
+            document.getElementById('piecesRemoved').value = '';
+
+            document.getElementById('opNumber').disabled = true;
+            document.getElementById('componentCode').disabled = true;
+            document.getElementById('opQuantity').disabled = true;
+            document.getElementById('opLength').disabled = true;
+            document.getElementById('fabricType').disabled = true;
+            document.getElementById('opWeight').disabled = true;
+            document.getElementById('piecesRemoved').disabled = true;
+            document.getElementById('calculate-btn').disabled = true;
+        }
+
+        function updateTable() {
+            const tableBody = document.getElementById('recordsTable').getElementsByTagName('tbody')[0];
+            tableBody.innerHTML = "";
+
+            records.sort((a, b) => new Date(b.date) - new Date(a.date));
+
+            records.forEach(record => {
+                const row = tableBody.insertRow();
+                row.insertCell(0).textContent = record.date;
+                row.insertCell(1).textContent = record.machine;
+                row.insertCell(2).textContent = record.opNumber;
+                row.insertCell(3).textContent = record.componentCode;
+                row.insertCell(4).textContent = record.opQuantity;
+                row.insertCell(5).textContent = record.opLength;
+                row.insertCell(6).textContent = record.fabricType;
+                row.insertCell(7).textContent = record.opWeight;
+                row.insertCell(8).textContent = record.piecesRemoved;
+            });
+        }
+
+        function saveRecords() {
+            localStorage.setItem('productionRecords', JSON.stringify(records));
+        }
+
+        function loadRecords() {
+            const savedRecords = localStorage.getItem('productionRecords');
+            if (savedRecords) {
+                records = JSON.parse(savedRecords);
             }
         }
 
-        // Função para calcular o número de voltas para tecido tubular
-        function calculateTurnsTubular(weight) {
-            const baseWeight = 65;
-            const baseTurns = 45;
-            if (weight === baseWeight) {
-                return baseTurns;
-            } else {
-                const difference = (weight - baseWeight) * (45 - 40) / (75 - 65);
-                return baseTurns - difference;
-            }
+        function downloadCSV() {
+            let csvContent = "data:text/csv;charset=utf-8,";
+            csvContent += "Data e Hora,Nome da Máquina,Número da OP,Código do Componente,Quantidade da OP,Comprimento da OP,Tipo de Tecido,Gramatura da OP,Quantidade de Peças Retiradas\n";
+
+            records.forEach(record => {
+                csvContent += `${record.date},${record.machine},${record.opNumber},${record.componentCode},${record.opQuantity},${record.opLength},${record.fabricType},${record.opWeight},${record.piecesRemoved}\n`;
+            });
+
+            const encodedUri = encodeURI(csvContent);
+            const link = document.createElement("a");
+            link.setAttribute("href", encodedUri);
+            link.setAttribute("download", "production_records.csv");
+            document.body.appendChild(link);
+            link.click();
+            document.body.removeChild(link);
         }
     </script>
 </body>
