--- a/index.html
+++ b/index.html
@@ -5,8 +5,63 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Controle de Produção</title>
     <style>
-        form {
+       body {
+            font-family: Arial, sans-serif;
+            margin: 20px;
+        }
+        .input-group {
+            margin-bottom: 10px;
+        }
+        label {
+            display: block;
+            margin-bottom: 5px;
+        }
+        input[type="number"],
+        input[type="text"] {
+            width: 100%;
+            padding: 8px;
+            margin-bottom: 10px;
+            box-sizing: border-box;
+        }
+        button {
+            padding: 10px 20px;
+            color: white;
+            border: none;
+            cursor: pointer;
+            margin-right: 5px;
+        }
+        .machine-btn {
+            width: 232px;
+            height: 72px;
             margin-bottom: 20px;
+            font-size: 20px;
+        }
+        #btn-cl01 { background-color: #FF5733; }
+        #btn-cl02 { background-color: #33C1FF; }
+        #btn-cl03 { background-color: #33FF57; }
+        #btn-cl04 { background-color: #FFC300; }
+        .calc-btn {
+            background-color: #4CAF50;
+        }
+        .calc-btn:hover {
+            background-color: #45a049;
+        }
+        .result {
+            margin-top: 20px;
+            font-weight: bold;
+        }
+        table {
+            margin-top: 20px;
+            width: 100%;
+            border-collapse: collapse;
+        }
+        table, th, td {
+            border: 1px solid #ddd;
+            padding: 8px;
+            text-align: left;
+        }
+        th {
+            background-color: #f2f2f2;
         }
     </style>
 </head>
