--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <label for="opQuantity">Quantidade da OP:</label>
         <input type="number" id="opQuantity" required><br>
 
-        <label for="opLength">Comprimento da OP (m):</label>
+        <label for="opLength">Comprimento da OP (cm):</label>
         <input type="number" id="opLength" required><br>
 
         <label for="fabricType">Tipo de Tecido:</label>
