--- a/index.html
+++ b/index.html
@@ -84,9 +84,9 @@
     <h1>Controle de Produção</h1>
 
     <div class="machine-buttons">
-        <button id="machine1" class="machine-btn inactive" onclick="toggleMachine(1)">Máquina 1</button>
-        <button id="machine2" class="machine-btn inactive" onclick="toggleMachine(2)">Máquina 2</button>
-        <button id="machine3" class="machine-btn inactive" onclick="toggleMachine(3)">Máquina 3</button>
+        <button id="machine1" class="machine-btn inactive" onclick="toggleMachine(1)">CL-01</button>
+        <button id="machine2" class="machine-btn inactive" onclick="toggleMachine(2)">CL-02</button>
+        <button id="machine3" class="machine-btn inactive" onclick="toggleMachine(3)">CL-03</button>
         <!-- Adicione mais botões de máquina se necessário -->
     </div>
 
@@ -113,7 +113,7 @@
                 <option value="">Selecione</option>
                 <option value="Plano">Plano</option>
                 <option value="Tubular">Tubular</option>
-                <option value="PET">PET</option>
+                <option value="PECH">PET</option>
             </select>
         </div>
         <div class="input-group">
