--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                 <option value="">Selecione</option>
                 <option value="Plano">Plano</option>
                 <option value="Tubular">Tubular</option>
-                <option value="PECH">PET</option>
+                <option value="PECH">PECH</option>
             </select>
         </div>
         <div class="input-group">
