--- a/index.html
+++ b/index.html
@@ -132,7 +132,6 @@
     <p id="cutAmountResult">Quantidade Cortada: </p>
     <p id="totalCutAmountResult">Quantidade Total Cortada: </p>
     <p id="cyclesResult">Número de Ciclos: </p>
-    <p id="additionalTurnsResult">Número de Voltas Restantes: </p>
 
     <table id="recordsTable">
         <thead>
@@ -229,13 +228,8 @@
             document.getElementById('totalCutAmountResult').textContent = `Quantidade Total Cortada: ${totalCutAmount}`;
 
             // Cálculo do Número de Ciclos
-            const numCycles = cutAmount / opQuantity;
-            document.getElementById('cyclesResult').textContent = `Número de Ciclos: ${numCycles.toFixed(2)}`;
-
-            // Cálculo das Voltas Restantes (Regra de Três)
-            const fractionalCycles = numCycles % 1;  // Parte decimal
-            const additionalTurns = Math.ceil(fractionalCycles * numTurns);
-            document.getElementById('additionalTurnsResult').textContent = `Número de Voltas Restantes: ${additionalTurns}`;
+            const numCycles = opQuantity / cutAmount;
+            document.getElementById('cyclesResult').textContent = `Número de Ciclos: ${numCycles}`;
 
             const record = {
                 timestamp: new Date().toLocaleString(),
