--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
     <p id="cutAmountResult">Quantidade Cortada: </p>
     <p id="totalCutAmountResult">Quantidade Total Cortada: </p>
     <p id="cyclesResult">Número de Ciclos: </p>
+    <p id="remainingTurnsResult">Restante de Voltas para Fechar a OP: </p>
 
     <table id="recordsTable">
         <thead>
@@ -228,8 +229,12 @@
             document.getElementById('totalCutAmountResult').textContent = `Quantidade Total Cortada: ${totalCutAmount}`;
 
             // Cálculo do Número de Ciclos
-            const numCycles = opQuantity / cutAmount;
+            const numCycles = (piecesRemoved / totalCutAmount).toFixed(2);
             document.getElementById('cyclesResult').textContent = `Número de Ciclos: ${numCycles}`;
+
+            // Novo cálculo - Restante de Voltas para Fechar a OP
+            const remainingTurns = Math.ceil((Math.ceil(numCycles * cutAmount) * numTurns) / cutAmount);
+            document.getElementById('remainingTurnsResult').textContent = `Restante de Voltas para Fechar a OP: ${remainingTurns}`;
 
             const record = {
                 timestamp: new Date().toLocaleString(),
