--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
     <p id="cutAmountResult">Quantidade Cortada: </p>
     <p id="totalCutAmountResult">Quantidade Total Cortada: </p>
     <p id="cyclesResult">Número de Ciclos: </p>
-    <p id="remainingTurnsResult">Restante de Voltas para Fechar a OP: </p>
+    <p id="remainingTurnsResult">Restante de voltas para fechar a OP: </p>
 
     <table id="recordsTable">
         <thead>
@@ -229,12 +229,14 @@
             document.getElementById('totalCutAmountResult').textContent = `Quantidade Total Cortada: ${totalCutAmount}`;
 
             // Cálculo do Número de Ciclos
-            const numCycles = (piecesRemoved / totalCutAmount).toFixed(2);
-            document.getElementById('cyclesResult').textContent = `Número de Ciclos: ${numCycles}`;
+            const numCycles = (opQuantity - piecesRemoved) / totalCutAmount;
+            document.getElementById('cyclesResult').textContent = `Número de Ciclos: ${numCycles.toFixed(3)}`;
 
-            // Novo cálculo - Restante de Voltas para Fechar a OP
-            const remainingTurns = Math.ceil((Math.ceil(numCycles * cutAmount) * numTurns) / cutAmount);
-            document.getElementById('remainingTurnsResult').textContent = `Restante de Voltas para Fechar a OP: ${remainingTurns}`;
+            // Cálculo do Restante de Voltas para Fechar a OP
+            const decimalPart = numCycles - Math.floor(numCycles); // Parte decimal
+            const remainingCutAmount = Math.ceil(decimalPart * cutAmount);
+            const remainingTurns = Math.ceil((remainingCutAmount * numTurns) / cutAmount);
+            document.getElementById('remainingTurnsResult').textContent = `Restante de voltas para fechar a OP: ${remainingTurns}`;
 
             const record = {
                 timestamp: new Date().toLocaleString(),
