--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
     <p id="cutAmountResult">Quantidade Cortada: </p>
     <p id="totalCutAmountResult">Quantidade Total Cortada: </p>
     <p id="cyclesResult">Número de Ciclos: </p>
-    <p id="remainingTurnsResult">Restante de voltas para fechar a OP: </p>
+    <p id="remainingTurnsResult">Restante de Voltas para Fechar a OP: </p>
 
     <table id="recordsTable">
         <thead>
@@ -224,20 +224,20 @@
             document.getElementById('cutAmountResult').textContent = `Quantidade Cortada: ${cutAmount}`;
 
             // Cálculo da Quantidade Total Cortada
-            const activeMachines = getActiveMachinesCount();
-            const totalCutAmount = cutAmount * activeMachines;
+            const totalCutAmount = cutAmount + piecesRemoved;
             document.getElementById('totalCutAmountResult').textContent = `Quantidade Total Cortada: ${totalCutAmount}`;
 
             // Cálculo do Número de Ciclos
-            const numCycles = (opQuantity - piecesRemoved) / totalCutAmount;
+            const numCycles = totalCutAmount / opQuantity;
             document.getElementById('cyclesResult').textContent = `Número de Ciclos: ${numCycles.toFixed(3)}`;
 
             // Cálculo do Restante de Voltas para Fechar a OP
-            const decimalPart = numCycles - Math.floor(numCycles); // Parte decimal
-            const remainingCutAmount = Math.ceil(decimalPart * cutAmount);
-            const remainingTurns = Math.ceil((remainingCutAmount * numTurns) / cutAmount);
-            document.getElementById('remainingTurnsResult').textContent = `Restante de voltas para fechar a OP: ${remainingTurns}`;
+            const fractionalPart = numCycles - Math.floor(numCycles); // Parte decimal
+            const additionalCuts = Math.ceil(fractionalPart * cutAmount);
+            const remainingTurns = Math.ceil((additionalCuts * numTurns) / cutAmount);
+            document.getElementById('remainingTurnsResult').textContent = `Restante de Voltas para Fechar a OP: ${remainingTurns}`;
 
+            const activeMachines = getActiveMachinesCount();
             const record = {
                 timestamp: new Date().toLocaleString(),
                 activeMachines,
